# HDFSWrapper

./: README.md
hadoop-hdfs-native/: CMakeLists.txt
hadoop-hdfs-native/main/native/libhdfs/: hdfs.c
hadoop-hdfs-native/main/native/libhdfs/os/posix/: thread_local_storage.c
